AE: Fix build after TR translations merge
Change-Id: I33ee7172e86bed5d980d6ef7b5fba25a66141180

--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -984,7 +984,7 @@
     <!-- Halo -->
     <string name="halo_settings_title">Halo</string>
     <string name="halo_behavior_title">Halo Davranışı</string>
-    <string name="halo_hide_title">Halo'yu geçerli faaliyetten sonra kapat</string>
+    <string name="halo_hide_title">Halo\'yu geçerli faaliyetten sonra kapat</string>
     <string name="halo_hide_summary">Bildirim geldiğinde Halo bir süre görünür ve ardından kaybolur</string>
     <string name="halo_pause_title">Etkin uygulamayı durdur</string>
     <string name="halo_pause_summary">Halo ile bir uygulamayı açarkan etkin uygulamayı durdurur</string>
