Add Haptic Feedback to QS tiles [2/2]
Change-Id: If1833f560bdfda8f50e6d24e26154abef1127c4b

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1081,4 +1081,8 @@
     <string name="themes_tile_mods_alarm_value" translatable="false">mods_alarms</string>
     <string name="themes_tile_mods_ringtone_value" translatable="false">mods_ringtones</string>
 
+    <!-- QuickSettings haptic feedback -->
+    <string name="quick_settings_vibrate_title">Vibrate on touch</string>
+    <string name="quick_settings_vibrate_summary">Vibrate when touching tiles</string>
+
 </resources>
