Add SystemUI restart prompt dialog to Helpers class
Change-Id: Ie4a26cfe23b1680752433692dae5de4e5f8030f3

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1089,4 +1089,8 @@
     <string name="qs_advanced_data_title">Advanced data tile</string>
     <string name="qs_advanced_data_summary">Enable one tap action to enable or disable data</string>
 
+    <!-- SystemUI restart prompt -->
+    <string name="systemui_restart_title">WARNING</string>
+    <string name="systemui_restart_message">SystemUI will be restarted so that selected setting can be applied correctly.</string>
+
 </resources>
