--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -88,6 +88,14 @@
     <string name="lcd_density_default_value_format">%d DPI (default)</string>
     <string name="restarting_ui">Restarting UI\u2026</string>
     <string name="lcd_density_prompt_message">Some apps may not function at non-standard dpi.\n\nThis will restart your phone.</string>
+    <string name="custom_density">Custom</string>
+    <string name="custom_density_value">1001</string>
+    <string name="set_custom_density_title">Set custom density</string>
+    <string name="set_custom_density_set">Set</string>
+    <string name="custom_density_dialog_title">WARNING!</string>
+    <string name="custom_density_dialog_summary">Changing your default LCD density can sometimes cause certain apps to not function properly and/or the playstore to show apps being incompatible with your device"</string>
+    <string name="dpi">DPI</string>
+    <string name="restarting_ui">Restarting UI\u2026</string>
 
     <!-- Title for the button to restart a print job. [CHAR LIMIT=25] -->
     <string name="print_restart">Restart</string>
