AE: AE custom summary in Settings app (2/3)
Change-Id: I793510410a260da35d9fb83add193b8053edc921

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -970,6 +970,10 @@
     <string name="ae_header_bg_image_opacity_title">Navigation drawer header bg image opacity</string>
     <string name="ae_nav_drawer_checked_text_title">Selected item text color</string>
     <string name="ae_nav_drawer_unchecked_text_title">Item text color</string>
+    <string name="ae_settings_summary_title">Custom AE summary text in Settings application</string>
+    <string name="custom_summary_title">Custom AE summary</string>
+    <string name="custom_summary_explain">Please enter a new summary. Leave blank to revert to stock text.</string>
+    <string name="custom_summary_notset">Custom rom personalizations</string>
 
     <!-- Halo -->
     <string name="halo_settings_title">Halo</string>
