--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -528,4 +528,15 @@
     <!-- Battery Saver easy toggle -->
     <string name="qs_battery_easy_toggle_title">Battery tile easy toggle</string>
     <string name="qs_battery_easy_toggle_summary">Makes it so one click will turn Battery Saver on or off instead of taking you to settings</string>
+
+    <!-- OmniSwitch Recents -->
+    <string name="aosp_recents_title">AICP recents</string>
+    <string name="omniswitch_recents_title">OmniSwitch recents</string>
+    <string name="recents_use_omniswitch_title">Use for a recents alterative</string>
+    <string name="recents_use_omniswitch_summary">Use OmniSwitch instead of the default recents view</string>
+    <string name="omniswitch_start_settings_title">OmniSwitch settings</string>
+    <string name="omniswitch_start_settings_summary">View the settings for OmniSwitch</string>
+    <string name="omniswitch_first_time_title">Warning</string>
+    <string name="omniswitch_first_time_message">If using OmniSwitch as recents alterative, make sure you have OmniSwitch enabled</string>
+
 </resources>
