Custom QS rows/columns [2/2]
*DU Edits*
- Cleaned up some of the redundancy

AICPfy

Change-Id: I05380b5ce5edb55775f559e1b4bd40a73ded506f

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -804,13 +804,10 @@
     <!-- Status bar header font style -->
     <string name="status_bar_header_font_style_title">Header font style</string>
 
-    <!-- QS Tiles Columns -->
-    <string name="qs_num_columns_title">Number of QS tiles per row</string>
-    <string name="qs_num_columns_showing">%1$s tiles per row are shown</string>
-
-    <!-- QS Tiles Rows -->
-    <string name="qs_num_rows_title">Number of QS rows</string>
-    <string name="qs_num_rows_showing">%1$s rows are shown</string>
+    <!-- Quick settings tiles columns and rows config -->
+    <string name="qs_rows_portrait_title">Rows (portrait)</string>
+    <string name="qs_rows_landscape_title">Rows (landscape)</string>
+    <string name="qs_columns_title">Columns</string>
 
     <!-- Lockscreen Colors -->
     <string name="lockscreen_colors_title">Lockscreen colors</string>
