Custom small QS tiles [2/2]
Change-Id: I42d7df7a3f8a3ddc562fdf32caf27402c1b5aba5

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -808,6 +808,7 @@
     <string name="qs_rows_portrait_title">Rows (portrait)</string>
     <string name="qs_rows_landscape_title">Rows (landscape)</string>
     <string name="qs_columns_title">Columns</string>
+    <string name="sysui_qqs_count_title">Small QS tiles</string>
 
     <!-- Lockscreen Colors -->
     <string name="lockscreen_colors_title">Lockscreen colors</string>
