Settings: The Return of the Ticker 1/2
AICPfy:
- Completely rewritten to go with AICP extras
so giving my self authorship

Change-Id: Ia8c3dff1a30f9106032b8dca0fcd9b4d5455ef4f

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1087,4 +1087,14 @@
     <string name="systemui_restart_title">WARNING</string>
     <string name="systemui_restart_message">SystemUI will be restarted so that selected setting can be applied correctly.</string>
 
+    <!-- Status Bar Ticker -->
+    <string name="ticker_screen_title">Ticker</string>
+    <string name="ticker_title">Status Bar Ticker</string>
+    <string name="ticker_screen_summary">Customize the ticker style</string>
+    <string name="ticker_summary">Enable the old status bar ticker</string>
+    <string name="ticker_restore_defaults_title">Restore defaults</string>
+    <string name="text_title">Text</string>
+    <string name="icon_title">Icon</string>
+    <string name="colors_title">Colors</string>
+
 </resources>
