Heads up switch
Change-Id: I15e714c7030303908b360718b9bbdec9b8db2eb1

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1097,4 +1097,8 @@
     <string name="icon_title">Icon</string>
     <string name="colors_title">Colors</string>
 
+    <!-- Heads up switch -->
+    <string name="heads_up_switch_title">Heads up</string>
+    <string name="heads_up_switch_summary">Toogle Heads up globally, not per app.</string>
+
 </resources>
