Optional screenshot type [2/2]
Change-Id: I52d9156fea5850e1cb999e02ba09f4092c71614d

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1101,4 +1101,9 @@
     <string name="heads_up_switch_title">Heads up</string>
     <string name="heads_up_switch_summary">Toogle Heads up globally, not per app.</string>
 
+    <!-- Optional screenshot type -->
+    <string name="screenshot_type_title">Screenshot type</string>
+    <string name="screenshot_type_fullscreen">Take fullscreen screenshots</string>
+    <string name="screenshot_type_partial">Drag selection on the area you want to take as a screenshot</string>
+
 </resources>
