Add ability to permanently hide apps from recents [2/3]
Change-Id: I9472520482e7fa0f5d65dd110e668a1d35c4c8f0

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -653,4 +653,10 @@
     <string name="status_bar_custom_header_shadow_title">Header image shadow</string>
     <string name="status_bar_custom_header_shadow_summary">For better visibility on bright images</string>
     <string name="unit_percent">\u0025</string>
+
+    <!-- Hide Apps from Recents -->
+    <string name="hide_apps_from_recents_title">Hidden apps</string>
+    <string name="hide_from_recents_add_app">Add App</string>
+    <string name="hide_apps_from_recents_summary">Pick which apps to exclude from the recents panel</string>
+
 </resources>
